<!--
   - Copyright (c) Microsoft. All rights reserved. Licensed under the MIT license.
   - See LICENSE in the project root for license information.
  -->

<resources>
    <string name="app_name">Lamna Healthcare App</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Enter your email or user id</string>
    <string name="prompt_password">Enter your password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="title_activity_wellbabyreport"></string>
    <string name="large_text">"<i>Prepared for the Trudeau family\n\n</i><b>Little Jonathan is doing very well!!</b>\n\nJonathan visited with Mom and Dad for his 6-month well child check. The family has no concerns stating the patient has been doing well overall since the last visit taking in a well-balanced diet consisting of formula transitioning to whole milk, fruits, vegetables, proteins and grains.\nNo concerns with hearing or vision.\n<u>Growth and development:</u> Denver II normal passing all developmental milestones per age in areas of fine motor, gross motor, personal and social interaction as well as speech and language development.\nSee <b>Denver II</b> form in the chart.\n\n<b>PAST MEDICAL HISTORY:</b>\n<u>Allergies:</u> None.\n<u>Medications:</u> Tylenol this morning in preparation for vaccines and a multivitamin daily. and use of imagery guide visual treatments. These elements do far more than please the eye. \n\n<b>FAMILY SOCIAL HISTORY:</b>\nUnchanged since last checkup. \n\n<b>REVIEW OF SYSTEMS:</b>\nAs per HPI; otherwise negative.\n\n<b>OBJECTIVE:</b>\nWeight 24 pounds 1 ounce. Height 30 inches. Head circumference 46.5 cm. Temperature afebrile. \n<u>General:</u> A well-developed, well-nourished, cooperative, alert and interactive 1-year-old white female smiling, happy and drooling.\n<u>Chest:</u> Clear to auscultation bilaterally. No wheeze. No crackles. Good air exchange.\n<u>Cardiovascular:</u> Regular rate and rhythm. No murmur. Good pulses bilaterally.\n<u>Abdomen:</u> Soft, nontender. Nondistended. Positive bowel sounds. No mass. No organomegaly.\n<u>Genitourinary:</u> Tanner I female genitalia. Femoral pulses equal bilaterally. No rash.\n<u>Extremities:</u> Full range of motion. No cyanosis, clubbing or edema. Negative Ortolani and Barlow maneuver.\n<u>Back:</u> Straight. No scoliosis.\n<u>Integument:</u> Warm, dry and pink without lesions.\n<u>Neurological:</u> Alert. Good muscle tone and strength. Cranial nerves II through XII are grossly intact.\n\n<b>ASSESSMENT AND PLAN:</b>\n1. Well 3-month-old white male.\n2. Follow up for the 12-month well child check or as needed for acute care."</string>
    <string name="videoCodecTerms"><b>MICROSOFT SOFTWARE LICENSE TERMS\nSOFTWARE FOR VIDEO CONFERENCING IN MOBILE APPLICATIONS POWERED BY SKYPE FOR BUSINESS </b>These license terms are an agreement between you and Microsoft Corporation (or one of its affiliates). They apply to the software named above and any Microsoft services or software updates (except to the extent such services or updates are accompanied by new or additional terms, in which case those different terms apply prospectively and do not alter your or Microsoft’s rights relating to pre-updated software or services). IF YOU COMPLY WITH THESE LICENSE TERMS, YOU HAVE THE RIGHTS BELOW.\n<b>1.	INSTALLATION AND USE RIGHTS.\na)  General. You may run copies of the software on your devices solely with versions of software applications that communicate with validly licensed Microsoft Skype for Business Server or Skype for Business Online.  \nb)  Third Party Applications. The software may include third party applications that Microsoft, not the third party, licenses to you under this agreement. Any included notices for third party applications are for your information only.  \n2.	SCOPE OF LICENSE. The software is licensed, not sold. Microsoft reserves all other rights. Unless applicable law gives you more rights despite this limitation, you will not (and have no right to):\na)  work around any technical limitations in the software that only allow you to use it in certain ways;  \nb)  reverse engineer, decompile or disassemble the software;  \nc)  remove, minimize, block, or modify any notices of Microsoft or its suppliers in the software;  \nd)  use the software in any way that is against the law or to create or propagate malware; or  \ne)  share, publish, or lend the software (except for any distributable code, subject to the applicable terms above), provide the software as a stand-alone hosted solution for others to use, or transfer the software or this agreement to any third party.  \n3.	EXPORT RESTRICTIONS. You must comply with all domestic and international export laws and regulations that apply to the software, which include restrictions on destinations, end users, and end use. For further information on export restrictions, visit (aka.ms/exporting).  \n4.	SUPPORT SERVICES. Microsoft is not obligated under this agreement to provide any support services for the software. Any support provided is “as is”, “with all faults”, and without warranty of any kind.  \n5.	ENTIRE AGREEMENT. This agreement, and any other terms Microsoft may provide for supplements, updates, or third-party applications, is the entire agreement for the software.  \n6.	APPLICABLE LAW. If you acquired the software in the United States, Washington law applies to interpretation of and claims for breach of this agreement, and the laws of the state where you live apply to all other claims. If you acquired the software in any other country, its laws apply.  \n7.	CONSUMER RIGHTS; REGIONAL VARIATIONS. This agreement describes certain legal rights. You may have other rights, including consumer rights, under the laws of your state or country. Separate and apart from your relationship with Microsoft, you may also have rights with respect to the party from which you acquired the software. This agreement does not change those other rights if the laws of your state or country do not permit it to do so. For example, if you acquired the software in one of the below regions, or mandatory country law applies, then the following provisions apply to you:\na)  Australia. You have statutory guarantees under the Australian Consumer Law and nothing in this agreement is intended to affect those rights.  \nb)  Canada. If you acquired this software in Canada, you may stop receiving updates by turning off the automatic update feature, disconnecting your device from the Internet (if and when you re-connect to the Internet, however, the software will resume checking for and installing updates), or uninstalling </b></string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_skype_call">Live Chat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="userDisplayName">David Trudeau</string>
    <string name="leaveCall">leaveCall</string>
    <string name="callEstablished">callEstablished</string>
    <string name="resume_video">Resume video</string>
    <string name="mute_audio">Mute audio</string>
    <string name="callFragmentInflated">inflated</string>
    <string name="companyName">Lamna Healthcare Company</string>
    <string name="lamna_healthcare">Lamna Healthcare</string>
    <string name="meeting_url">https://meet.lync.com/microsoft/johnau/3QV6T854</string>
    <string name="meeting_url_summary">Meeting URL</string>
    <string name="baby_Name">Jonathan Trudeau</string>
    <string name="signinTitle">Lamna Healthcare Company</string>
    <string name="serverTopology">Skype for Business Online</string>
    <string name="title_activity_preference">PreferenceActivity</string>
    <string name="cloudAppBaseurl">PUT YOUR SAAS APP GET-TOKEN METHOD URL HERE</string>
    <string name="SaasHostName">PUT YOUR SAAS HOST NAME HERE</string>
    <string name="SfBOnlineFlag">SkypeForBusinessOnline</string>
    <string name="onlineMeetingFlag">onlineMeeting</string>
    <string name="discoveryUrl">discoveryUrl</string>
    <string name="authToken">authToken</string>
    <string name="onPremiseMeetingUrl">onPremMeetingUrl</string>
    <string name="toolbarSubtitle">Jonathan Trudeau</string>
    <string name="toggle_camera">Toggle camera</string>
    <string name="canToggleCamera">canToggleCamera</string>
    <string name="enablePreviewFeatures">enablePreviewFeatures</string>
    <string name="enablePreviewFeaturesTitle">Enable preview features</string>
    <string name="enablePreviewFeaturesSummary">Enable Skype for Business server preview features</string>
    <string name="skypeForBusinessOnlineSummary">Are you a Skype for Business Online (Office 365) user?</string>
    <string name="maxVideoChannels">maxVideoChannels</string>
    <string name="maxVideoChannelsTitle">Maximum video channels</string>
    <string name="maxVideoChannelsSummary">The maximum video channels allowed in a conversation</string>
    <string name="toggleVideoPause">ToggleVideoPause</string>
    <string name="pauseVideo">Pause video</string>
    <string name="acceptedVideoLicense">acceptedVideoLicense</string>
    <string name="promptedForLicense">promptedForLicense</string>
    <string name="requireWifiForVideo">requireWifiForVideo</string>
    <string name="requireWifiForAudio">requireWifiForAudio</string>

</resources>
