<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="@string/SfBOnlineFlag"
        android:title="@string/serverTopology"
        android:summary="@string/skypeForBusinessOnlineSummary"
        android:defaultValue="false"/>
    <CheckBoxPreference
        android:key="@string/enablePreviewFeatures"
        android:title="@string/enablePreviewFeaturesTitle"
        android:summary="@string/enablePreviewFeaturesSummary"
        android:defaultValue="false" />
    <EditTextPreference
        android:key="@string/maxVideoChannels"
        android:title="@string/maxVideoChannelsTitle"
        android:summary="@string/maxVideoChannelsSummary"
        android:defaultValue="5"/>

    <CheckBoxPreference
        android:key="@string/requireWifiForVideo"
        android:title="Require Wifi for Video"
        android:summary="Require Wifi connection for call video"
        android:defaultValue="true"/>
    <CheckBoxPreference
        android:key="@string/requireWifiForAudio"
        android:title="Require Wifi For Audio"
        android:summary="Require Wifi connection for call audio"
        android:defaultValue="true"/>


</PreferenceScreen>