<!--
   - Copyright (c) Microsoft. All rights reserved. Licensed under the MIT license.
   - See LICENSE in the project root for license information.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.microsoft.office.sfb.healthcare.SkypeCall">
    <item
        android:id="@+id/pauseVideoMenuItem"
        android:orderInCategory="100"
        android:title="@string/resume_video"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/muteAudioMenuItem"
        android:orderInCategory="100"
        android:title="@string/mute_audio"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/changeCamera"
        android:orderInCategory="100"
        android:title="@string/toggle_camera"
        android:enabled="false" />
</menu>
